    Last.fm and Google are used to find images.
16. Use cache by default for devices.
17. Compress cache files.
18. Save remote device library settings on remote device.
19. When using list or icon view, only show genres that are relevant to the
    current level.
20. (Qt-Only) When displaying filesizes, use KiB (1024 bytes) for KDE and
    Windows, and kB (1000 bytes) for others.

0.9.2
-----
1. (Qt-Only) Dont show clear button for read-only line-edits.
2. Fix 'Locate In Library' when library is not set to tree mode.
3. Use grid layout for transcoder slider, removes Qt layout warning.
4. Simplified Chinese translation - thanks to 薛景

0.9.1
-----
1. Fix saving of 'Store covers in MPD dir' setting.
2. Show/hide main window when KDE tray item clicked.
3. Add 'Show Window' to tray item menu.
4. Dont allow to set focus onto clear button in line-edits.
5. Remove animation when showing messagewidget, seems to workaround a crash
   when compiled with KDE and using Oxygen.
6. Fix activation of devices tab via keyboard shortcut.

0.9.0
-----
 1. Add a 'server' mode to cantata-dynamic. This contains a basic HTTP API to
    list rules, update rules, and start/stop the dynamic mode.
 2. Allow use of 'dynamic' playlists in windows builds, but only for server mode
    cantata-dynamic.
 3. Add support for 'Similar Artists' in dynamic mode.
 4. Add a gui setting to control the enforcement of single-click.
 5. When sorting tracks, sort on duration after sorting on name, title, and
    genre. This way if tracks do not have a track number, disc, year, etc, then
    we will sort on the name/title before duration.
 6. When refreshing DB, make sure Albums view is at top level.
 7. Set Artist, AlbumArtist, and Album of cue files to that of assigned album.
 8. Improve item-view mouse over for Gtk+ style - when hovering, draw selection
    into a QPixmap and set painter's opacity before drawing image.
 9. Workaround issue of sometimes having an item (in icon view) staying in